Add share song by isrc feature
