# src/MShare.Songs.Api/Queries/v1/Dtos/SongListResponseDto.cs
@@ -1,0 +1,9 @@
+﻿using System;
+namespace MShare.Songs.Api.Queries.Dtos.V1
+{
+	public class SongListResponseDto
+	{
+		public SongResponseDto Items { get; set; }
+	}
+}
+
