# src/Proxy.Api/GetByIsrcRequestDto.cs
@@ -1,0 +1,14 @@
+﻿using System;
+using System.ComponentModel.DataAnnotations;
+
+namespace Proxy.Api
+{
+	public class GetByIsrcRequestDto
+	{
+        [Required]
+        public string Isrc { get; set; }
+
+        public string? Region { get; set; }
+    }
+}
+
